--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+.codex
+.gemini
+tasks
 
 # env files (can opt-in for committing if needed)
 .env*
@@ -39,3 +42,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+bruno/
+supabase/schema.sql
+web-meme-tests/
